--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,1 +1,5 @@
-<h1> Login Page: Coming Soon! </h1>
+<body style="background-image: linear-gradient(-17deg, #F64B7F 4%, #F65C76 9%, #F67F64 21%, #F79C56 33%, #F7B24A 47%, #F7C242 61%, #F7CB3D 77%, #F7CE3C 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;color: #FFFFFF;">
+  <div style="padding-top:10%;" class="container-fluid text-center">
+    <h1 style="font-size:3em;"> Login Page: Coming Soon! </h1>
+  </div>
+</body>
