--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,13 +1,20 @@
 <div id="index-image" class="container-fluid">
-  <div style="padding-top:3%;">
+  <div id="index-logo">
     <%=image_tag 'aws_logo_white' %>
   </div>
-  <div id="index-text" class="container-fluid text-center">
-    <h2 style="font-size: 3em;"> Education today in order to focus on tomorrow. </h2>
-    <p style="font-size: 1.5em;"> Local education on a global scale. </p>
+  <div id="index-text" class="text-center">
+    <h2 style="font-size: 3.2em;"> Education today in order to focus on tomorrow. </h2>
+    <p style="font-size: 2em;"> Local education on a global scale. </p>
+  </div>
+  <div id="index-nav-bar">
+    <% if admin_signed_in? %>
+      <%= render './nav_bars/admin_nav_bar' %>
+    <% else %>
+      <%= render './nav_bars/user_nav_bar' %>
+    <% end %>
   </div>
 </div>
-<div style="background:linear-gradient(225deg, #BADEF3 0%, #02ABA7 100%);color:#FFFFFF;" class="container-fluid">
+<div style="background-image: linear-gradient(-30deg, #57C9E8 50%, #96CEDD 75%, #D0D2D3 100%);color:#FFFFFF;" class="container-fluid">
   <div style="padding-bottom:3%;" class="container text-center">
     <h1> LATEST NEWS </h1>
   </div>
