--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -1,4 +1,4 @@
-<body style="color:#06ACA9;">
+<body style="background-image: linear-gradient(-30deg, #57C9E8 50%, #96CEDD 75%, #D0D2D3 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;color: #FFFFFF;">
   <div style="padding-top: 5%;" class="container text-center">
     <h1 style="font-size: 38px;"> LOCATION </h1>
   </div>
