--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -1,16 +1,13 @@
-<body style="background:linear-gradient(0deg, #FFED04 0%, #F47B20 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;color: #FFFFFF;">
+<body style="background-image: linear-gradient(-11deg, #EF3FA9 12%, #EE46AB 20%, #EA58B0 33%, #E376B9 47%, #DBA0C5 63%, #D0D2D3 80%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;color: #FFFFFF;">
   <div style="padding-top: 5%;" class="container">
     <h1 style="padding-bottom:2%;font-size: 3em;" class="text-center"> RESULTS </h1>
   </div>
-  <div style="padding-bottom:3%;font-size: 1.2em;" class="container"
-    <p>Achievement is about more than grades. At Academic Workshop Singapore, our curriculum is holistic. We teach what children need to know for scholastic performance, but we also demonstrate the real-world application associated with the lesson. We make every effort to teach each child as an individual by taking an active interest in who they are as people. Please take a look below at the success we share with our students.</p>
-  </div>
   <% @results.each do |result| %>
     <div style="padding-bottom:3%;" class="container">
-      <div class="col-md-offset-3 col-md-3">
+      <div class="col-md-offset-1 col-md-3">
         <%= image_tag result.image.url(:medium)%>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-8">
         <h4><%=result.year.strftime("%Y")%> <%=result.level%></h4>
         <p><%= h(result.description).gsub(/\n/, '<br/>').html_safe %></p>
       </div>
