--- a/app/views/pages/staff.html.erb
+++ b/app/views/pages/staff.html.erb
@@ -1,19 +1,18 @@
-<div class="container-fluid text-center">
-  <h1 style="color:#0081C6; padding-top: 5%;"> STAFF </h1>
-</div>
-<div id="staff-image-div" class="container-fluid">
-  <%= image_tag 'staff_background' %> 
-</div>
-<div style="background: linear-gradient(19.86deg, #0081C6 0%, #BEDEF5 100%);color:#FFFFFF;padding-top:3%;padding-bottom:3%;" class="container-fluid">
-  <% @staff.each do |teacher| %>
-    <div class="container-fluid">
-      <div class="col-md-2">
-        <%= image_tag teacher.image.url(:medium) %>
+<body style="background-image: linear-gradient(-26deg, #FF9D6C 0%, #FE9A66 20%, #FC9355 47%, #F88639 78%, #F47B20 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;color: #FFFFFF;">
+  <div class="container-fluid text-center">
+    <h1 style="padding-top: 5%;"> STAFF </h1>
+  </div>
+  <div class="container-fluid">
+    <% @staff.each do |teacher| %>
+      <div class="container-fluid">
+        <div class="col-md-2">
+          <%= image_tag teacher.image.url(:medium) %>
+        </div>
+        <div class="col-md-10">
+          <h4><%= teacher.name.upcase %></h4>
+          <p><%= teacher.bio %></p>
+        </div>
       </div>
-      <div class="col-md-10">
-        <h4><%= teacher.name.upcase %></h4>
-        <p><%= teacher.bio %></p>
-      </div>
-    </div>
-  <% end %>
-</div>
+    <% end %>
+  </div>
+</body>
