Continue work on styling and add filtering functionality to schedule page

--- a/app/views/nav_bars/_user_nav_bar.html.erb
+++ b/app/views/nav_bars/_user_nav_bar.html.erb
@@ -1,5 +1,5 @@
 <div id="custom-nav" style="color: #FFFFFF;font-weight: 300;font-size: 16px;" class="text-center">
-  <div id="home-nav-tab" class="nav-tab">
+  <div id="home-nav-tab">
     <%= link_to(image_tag('aws_logo_color'), root_path) %>
   </div>
   <div id="classes-nav-tab" class="nav-tab classes-dropdown">
