--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,18 +15,22 @@
  *= require_self
  */
  @font-face {
-  font-family: 'Gotham';
+  font-family: 'Gotham-main';
   src: url('GOTHAM-LIGHT.TTF') format('truetype');
   font-weight: normal;
   font-style: normal;
  }
 
  @font-face {
-  font-family: 'Gotham';
+  font-family: 'Gotham-black';
   src: url('GOTHAM-BLACK.TTF') format('truetype');
   font-weight: 700;
   font-style: normal;
+ }
 
+ @font-face {
+  font-family: 'Gotham-thin';
+  src: url('GOTHAM-THIN.TTF') format('truetype');
  }
 
  .bold
@@ -35,7 +39,7 @@
  }
 
  #bootstrap-overrides {
-  font-family: 'Gotham';
+  font-family: 'Gotham-main';
  }
 
  /*standard user nav bar*/
@@ -59,8 +63,14 @@
   flex-direction: column;
 }
 
+.nav-tab p {
+  padding-top: 5%;
+  padding-bottom: .5%;
+}
+
 .nav-tab a {
   padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 #home-nav-tab {
@@ -74,6 +84,7 @@
 #home-nav-tab img{
   max-height: 100%;
   max-width: 100%;
+  overflow: hidden;
 }
 
 #classes-nav-tab {
@@ -217,6 +228,7 @@
 
 #location-map img {
   max-height: 500px;
+  padding-bottom: 10%;
 }
 
 /*Latest news images */
@@ -232,20 +244,18 @@
 
 /*About page*/
 
-#about-image {
-  background-image: url('/assets/about_background.jpg');
-  background-size: 100%;
-  display: flex;
-  overflow: hidden;
-  height: 580px;
+#about-image img {
+  height: 100%;
+  width: 100%;
 }
 
 
 #about-text {
-  padding-top: 10%;
+  padding-top: 2%;
   color: #FFFFFF;
   padding-left: 5%;
   padding-right: 5%;
+  padding-bottom: 2%;
 }
 
 /*Home page image and logo */
@@ -283,9 +293,52 @@
 
 /*Schedule page styling*/
 
-.schedule-icon img {
+.schedule-div {
+  padding-top: 2%;
+}
+
+.schedule-links {
+  font-size: 1.3em;
+  color: #F47B20;
+}
+
+.person-icon img {
   max-height: 15px;
   min-height: 3px;
   max-width: 15px;
   min-width: 3px;
+}
+
+.info-icon img {
+  max-height: 15px;
+  min-height: 5px;
+  max-width: 15px;
+  min-width: 5px;
+}
+
+.schedule-filters select { 
+  width: 60%;
+  margin: 5%;
+  padding: 1% 0% 1% 5%;
+  background-color: #FFFFFF !important;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url('/assets/scrollers.svg') 95% / 15% no-repeat #eee;
+  background-size: 15% 90%;
+}
+
+.schedule-filters input#date {
+  width: 60%;
+  padding: 1% 0% 1% 5%;
+  background-color: #FFFFFF !important;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url('/assets/calendar.svg') 95% / 15% no-repeat #eee;
+  background-size: 15% 90%;
+}
+
+.filter-button {
+  margin-left: 5%;
 }
