--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -2,16 +2,18 @@
   <div style="padding-top: 5%;" class="container">
     <h1 style="padding-bottom:2%;font-size: 3em;" class="text-center"> RESULTS </h1>
   </div>
-  <% @results.each do |result| %>
-    <div style="padding-bottom:3%;" class="container">
-      <div class="col-md-offset-1 col-md-3">
-        <%= image_tag result.image.url(:medium)%>
+  <% if @results %>
+    <% @results.each do |result| %>
+      <div style="padding-bottom:3%;" class="container">
+        <div class="col-md-offset-1 col-md-3">
+          <%= image_tag result.image.url(:medium)%>
+        </div>
+        <div class="col-md-8">
+          <h4><%=result.year.strftime("%Y")%> <%=result.level%></h4>
+          <p><%= h(result.description).gsub(/\n/, '<br/>').html_safe %></p>
+        </div>
       </div>
-      <div class="col-md-8">
-        <h4><%=result.year.strftime("%Y")%> <%=result.level%></h4>
-        <p><%= h(result.description).gsub(/\n/, '<br/>').html_safe %></p>
-      </div>
-    </div>
+    <% end %>
   <% end %>
 
 </body>
