--- a/app/views/pages/schedule.html.erb
+++ b/app/views/pages/schedule.html.erb
@@ -1,29 +1,54 @@
 <div class="container-fluid text-center" >
-  <h1 style="font-size: 3em; color: #0081C6;"> CLASS SCHEDULE </h1>
+  <h1 style="font-size: 3em; color: #0081C6; font-family: 'Gotham-main';"> CLASS SCHEDULE</h1>
 </div>
 <div class="container-fluid schedule-filters">
-  <p> Insert filters here </p>
+  <%= form_tag schedule_path, :method => 'get' do %>
+    <div class="col-md-4">
+      <%= select_tag :name, options_for_select(ScheduledClass.options_for_classes, 'All Classes')%>
+    </div>
+    <div class="col-md-4">
+      <%= select_tag :instructor, options_for_select(ScheduledClass.options_for_instructors, 'All Instructors')%>
+    </div>
+    <div class="col-md-4">
+      <%= select_tag :location, options_for_select(['All Locations'])%>
+    </div>
+    <div class="col-md-1">
+      <%= link_to "<<PREVIOUS", schedule_path(date: Date.current-1.week), :class => "schedule-links" %>
+    </div>
+    <div class="col-md-offset-1 col-md-2">
+      <%= link_to "CURRENT WEEK", schedule_path(date: Date.current), :class => "schedule-links" %>
+    </div>
+    <div class="col-md-offset-1 col-md-1">
+      <%= link_to "NEXT>>", schedule_path(date: Date.current+1.week), :class => "schedule-links" %>
+    </div>
+    <div class="col-md-offset-1 col-md-4">
+      <%= date_field_tag :date%>
+      <%= submit_tag "Filter", :name => nil, :class => "btn btn-small btn-primary filter-button" %>
+    </div>
+  <% end %>
 </div>
-<% @classes.each do | day, classes | %>
-  <div class="container-fluid class-table">
+
+<% if @classes %>
+  <div class="container-fluid schedule-div" >
     <table class="table">
-      <tr style="color:#06ACA9; font-weight: lighter;">
-        <th><%= day.upcase %></th>
-        <th> CLASS </th>
-        <th> ABOUT </th>
-        <th> INSTRUCTOR </th>
-        <th> SIGN UP </th>
-      </tr>
-      <% classes.each do | klass | %>
-        <tr>
-          <td><%=klass.time.strftime("%I:%M:%S %p") %></td>
-          <td><%=klass.name %></td>
-          <td class="schedule-icon"><%= image_tag 'info' %></td>
-          <td><%=klass.instructor %></td>
-          <td class="schedule-icon"><%= image_tag 'person' %></td>
+      <% @classes.each do | day, classes | %>
+        <tr style="color:#06ACA9; font-weight: 500; font-size: 1.4em; text-align: center;">
+          <th><%= day.upcase %></th>
+          <th> CLASS </th>
+          <th> ABOUT </th>
+          <th> INSTRUCTOR </th>
+          <th> SIGN UP </th>
         </tr>
+        <% classes.each do | klass | %>
+          <tr style="font-size: 1.3em; font-family: 'Gotham-thin';">
+            <td><%=klass.time.strftime("%I:%M %p") %></td>
+            <td><%=klass.name %></td>
+            <td style="padding-left: 2.2%;" class="info-icon"><%= image_tag 'info' %></td>
+            <td><%=klass.instructor %></td>
+            <td style="padding-left: 3%;" class="person-icon"><%= image_tag 'person' %></td>
+          </tr>
+        <% end %>
       <% end %>
     </table>
   </div>
 <% end %>
-
