--- a/app/views/pages/staff.html.erb
+++ b/app/views/pages/staff.html.erb
@@ -2,17 +2,19 @@
   <div class="container-fluid text-center">
     <h1 style="padding-top: 5%;"> STAFF </h1>
   </div>
-  <div class="container-fluid">
-    <% @staff.each do |teacher| %>
-      <div class="container-fluid">
-        <div class="col-md-2">
-          <%= image_tag teacher.image.url(:medium) %>
+  <% if @staff %>
+    <div class="container-fluid">
+      <% @staff.each do |teacher| %>
+        <div class="container-fluid">
+          <div class="col-md-2">
+            <%= image_tag teacher.image.url(:medium) %>
+          </div>
+          <div class="col-md-10">
+            <h4><%= teacher.name.upcase %></h4>
+            <p><%= teacher.bio %></p>
+          </div>
         </div>
-        <div class="col-md-10">
-          <h4><%= teacher.name.upcase %></h4>
-          <p><%= teacher.bio %></p>
-        </div>
-      </div>
-    <% end %>
-  </div>
+      <% end %>
+    </div>
+  <% end %> 
 </body>
