--- a/app/views/scheduled_classes/_current_classes_table.html.erb
+++ b/app/views/scheduled_classes/_current_classes_table.html.erb
@@ -2,11 +2,11 @@
   <table class="table table-bordered">
     <tr>
       <th> Class Name </th>
-      <th> Day </th>
+      <th> Start Date </th>
+      <th> End Date </th>
       <th> Time </th>
       <th> Description </th>
       <th> Instructor </th>
-      <th class="text-center"> Active Class </th>
       <th class="text-center"> Edit Class </th>
       <th class="text-center"> Delete Class </th>
     </tr>
