--- a/app/views/scheduled_classes/_scheduled_class_compact.html.erb
+++ b/app/views/scheduled_classes/_scheduled_class_compact.html.erb
@@ -1,14 +1,10 @@
 <tr>
   <td><%=scheduled_class.name%></td>
-  <td><%=scheduled_class.day%></td>
-  <td><%=scheduled_class.time.strftime("%I:%M:%S %p")%></td>
+  <td><%=scheduled_class.start_date.strftime("%b %d, %Y")%></td>
+  <td><%=scheduled_class.end_date.strftime("%b %d, %Y")%></td>
+  <td><%=scheduled_class.time.strftime("%I:%M %p")%></td>
   <td><%=truncate(scheduled_class.about, length:50)%></td>
   <td><%=scheduled_class.instructor%></td>
-  <% if scheduled_class.active %>
-    <td class="text-center"><span class="glyphicon glyphicon-ok" style="color:green"></span></td>
-  <% else %>
-    <td class="text-center"><span class="glyphicon glyphicon-remove" style="color:grey"></span></td>
-  <% end %>
   <td class="text-center"><%= link_to "Edit", edit_scheduled_class_path(scheduled_class), :class => "btn btn-info btn-sm" %></td>
   <td class="text-center"><%= link_to "Delete", scheduled_class, method: :delete, data: {confirm: "Are you sure you want to delete this scheduled class?"}, :class => "btn btn-danger btn-sm" %></td>
 </tr>
