--- a/app/views/scheduled_classes/new.html.erb
+++ b/app/views/scheduled_classes/new.html.erb
@@ -4,9 +4,15 @@
   </div>
   <%= form_for @scheduled_class, url: {action: "create"}, html: {class: "form-horizontal"} do |f| %>
     <div class="form-group">
-      <%=f.label 'Day:', :class => "col-sm-2 control-label" %>
+      <%=f.label 'Start Date:', :class => "col-sm-2 control-label" %>
       <div class="col-sm-10">
-        <%=f.select(:day, options_for_select(["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"]), :class =>"form-control")%>
+        <%=f.date_field :start_date, :class =>"form-control"%>
+      </div>
+    </div>
+    <div class="form-group">
+      <%=f.label 'End Date:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.date_field :end_date, :class =>"form-control"%>
       </div>
     </div>
     <div class="form-group">
