--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>AcademicWorkshop</title>
+    <%= favicon_link_tag 'favicon.ico' %>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -16,6 +19,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
@@ -23,16 +27,20 @@
   </head>
 
   <body id="bootstrap-overrides">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
 
     <% unless params[:controller] == "pages" && params[:action] == "index" %>
-      <% if admin_signed_in? %>
-        <%= render './nav_bars/admin_nav_bar' %>
-      <% else %>
-        <%= render './nav_bars/user_nav_bar' %>
-      <% end %> 
+      <div id="normal-nav-container">
+        <% if admin_signed_in? %>
+          <%= render './nav_bars/admin_nav_bar' %>
+        <% else %>
+          <%= render './nav_bars/user_nav_bar' %>
+        <% end %>
+      </div>
     <% end %> 
+
+    <div id="mobile-nav-container">
+      <%= render './nav_bars/mobile_nav_bar' %>
+    </div>
 
 
 
