--- a/app/views/nav_bars/_admin_nav_bar.html.erb
+++ b/app/views/nav_bars/_admin_nav_bar.html.erb
@@ -22,7 +22,7 @@
     <%= link_to "LOCATION", location_path %>
   </div>
   <div id="admin-nav-tab" class="nav-tab admin-dropdown">
-    <p class="admin-drpbtn">ADMIN DASHBOARD</p>
+    <p class="admin-drpbtn">DASHBOARD</p>
     <div class="admin-dropdown-content">
       <%= link_to "News Updates", admin_news_path%>
       <%= link_to "Class Descriptions", admin_classes_path %>
