--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,8 @@
 <body style="background-image: linear-gradient(-12deg, #F9EC31 0%, #F6EA34 27%, #EDE23D 46%, #DED54C 62%, #C8C261 76%, #ADAB7D 90%, #929497 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;color: #495e68;">
   <div id="about-text" class="container-fluid text-center">
-    <h1 style="font-size: 3.2em; color: #FFFFFF;"> ABOUT US</h1>
+    <h1 style="font-size: 3.2em; color: #FFFFFF; font-family: 'Gotham-medium';"> ABOUT US</h1>
   </div>
-  <div class ="container-fluid">
+  <div class ="container-fluid about-descriptions">
     <div style="padding-bottom: 3%;" class ="container">
       <div class="col-md-2 about-image">
         <%= image_tag 'personal' %>
