--- a/app/views/pages/classes.html.erb
+++ b/app/views/pages/classes.html.erb
@@ -1,6 +1,6 @@
 <body style="background-image: linear-gradient(-17deg, #AAAD00 0%, #A4AD06 12%, #93AD17 28%, #77AC32 47%, #50AB58 67%, #1EAB89 88%, #00AAA6 100%); height:100%;margin:0;background-repeat: no-repeat;background-attachment: fixed;color:#FFFFFF;">
-  <div style="padding-top: 5%;" class="container">
-    <h1 class="text-center" style="padding-bottom: 2%;"> CLASS DESCRIPTIONS </h1>
+  <div style="padding-top: 2%;" class="container">
+    <h1 class="text-center" style="padding-bottom: 2%; font-family: 'Gotham-medium';"> CLASS DESCRIPTIONS </h1>
   </div>
   <% if @descriptions %>
     <% @descriptions.each do |classification, classes| %>
