--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -1,12 +1,12 @@
 <body style="background-image: linear-gradient(-30deg, #57C9E8 50%, #96CEDD 75%, #D0D2D3 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;color: #FFFFFF;">
-  <div style="padding-top: 5%;" class="container text-center">
-    <h1 style="font-size: 38px;"> LOCATION </h1>
+  <div style="padding-top: 2%;" class="container text-center">
+    <h1 style="font-size: 2.8em; font-family: 'Gotham-medium';"> LOCATION </h1>
   </div>
   <div style="padding-top:3%;" class="container text-center">
-    <div style="padding-top:10%;" class="container col-md-5">
-      <h2 style="font-size: 36px;">10 Windstedt Road<br/>Singapore 227977</h2>
-      <p style="font-size: 30px;padding-top: 4%;">+65 6733 5447</p>
-      <p style="font-size: 25px;padding-top: 4%;">We’d love to hear from you, <u>contact us</u>!</p>
+    <div style="padding-top:6%;" class="container col-md-5">
+      <h2 style="font-size: 2.5em;">10 Windstedt Road<br/>Singapore 227977</h2>
+      <p style="font-size: 2.5em;padding-top: 4%;">+65 6733 5447</p>
+      <p style="font-size: 2em;padding-top: 4%;">We’d love to hear from you, <u>contact us</u>!</p>
     </div>
     <div id="location-map" class="container col-md-7">
       <%= image_tag 'location' %>
