--- a/app/views/pages/staff.html.erb
+++ b/app/views/pages/staff.html.erb
@@ -1,12 +1,12 @@
 <body style="background-image: linear-gradient(-26deg, #FF9D6C 0%, #FE9A66 20%, #FC9355 47%, #F88639 78%, #F47B20 100%);height:100%;margin:0;background-repeat:no-repeat;background-attachment:fixed;color: #FFFFFF;">
   <div class="container-fluid text-center">
-    <h1 style="padding-top: 5%;"> STAFF </h1>
+    <h1 style="padding-top: 1%; font-family: 'Gotham-medium';"> STAFF </h1>
   </div>
   <% if @staff %>
     <div class="container-fluid">
       <% @staff.each do |teacher| %>
-        <div class="container-fluid">
-          <div class="col-md-2">
+        <div class="container-fluid staff-container">
+          <div class="col-md-2 staff-image">
             <%= image_tag teacher.image.url(:medium) %>
           </div>
           <div class="col-md-10">
