--- a/app/views/pages/schedule.html.erb
+++ b/app/views/pages/schedule.html.erb
@@ -36,7 +36,7 @@
 
 <% if !@classes.empty? %>
   <div class="container-fluid schedule-div" >
-    <table class="table">
+    <table class="table schedule-table">
       <% @classes.each do | day, classes | %>
         <tr style="color:#06ACA9; font-weight: 500; font-size: 1.4em; text-align: center;">
           <th><%= day.upcase %></th>
