--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,13 +43,27 @@
     </div>
 
 
-
-    <% if notice || alert %>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+    <% if notice %>
+      <div class="alert alert-info custom-pop-up" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <p class="notice"><%= notice %></p>
+      </div>
+    <% end %>
+    <% if alert %>
+      <div class="alert alert-warning custom-pop-up" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <p class="notice"><%= alert %></p>
+      </div>
     <% end %>
     <% if @errors%>
-      <div class="alert alert-danger" role="alert">
+      <div class="alert alert-danger custom-pop-up" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
         <ul class="list-unstyled">
         <% @errors.each do |e| %>
           <li><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><%= e %></li>
