--- a/app/views/nav_bars/_mobile_nav_bar.html.erb
+++ b/app/views/nav_bars/_mobile_nav_bar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+<nav style="margin-bottom: 0px;" class="navbar navbar-inverse navbar-static-top" role="navigation">
     <div class="container aws-mobile-header">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#aws-mobile-nav">
