--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -4,9 +4,9 @@
   </div>
   <div style="padding-top:3%;" class="container text-center">
     <div style="padding-top:6%;" class="container col-md-5">
-      <h2 style="font-size: 2.5em;">10 Windstedt Road<br/>Singapore 227977</h2>
+      <h2 style="font-size: 2.5em;">10 Winstedt Road<br/>Singapore 227977</h2>
       <p style="font-size: 2.5em;padding-top: 4%;">+65 6733 5447</p>
-      <p style="font-size: 2em;padding-top: 4%;">We’d love to hear from you, <u>contact us</u>!</p>
+      <p id="location-text">We’d love to hear from you, <a href="mailto:admin@acadws.com.sg?Subject=Website%20Inquiry" target="_top"><u>contact us</u></a>!</p>
     </div>
     <div id="location-map" class="container col-md-7">
       <%= image_tag 'location' %>
