--- a/app/views/pages/classes.html.erb
+++ b/app/views/pages/classes.html.erb
@@ -4,21 +4,21 @@
   </div>
   <% if @descriptions %>
     <% @descriptions.each do |classification, classes| %>
-      <div class="container" id="<%=classification.gsub(/\s+/, "").gsub(/[!@%&"]/,'')%>">
+      <div class="container">
         <div class="col-md-3">
           <h2 style="text-align: right; font-family: 'Gotham-black';"><%= classification %></h2>
         </div>
         <div class="col-md-9">
           <% if classes.length > 1 %>
             <% classes.group_by(&:title).each do |title, details| %>
-              <h4><%= title %></h4>
+              <h4 style="font-family: 'Gotham-medium';"><%= title %></h4>
               <% details.each do |detail| %>
                 <p><%= detail.description %></p>
                 <p> Fees: <%= detail.fees %></p>
               <% end %>
             <% end %>
           <% else %>
-            <h4><%= classes.first.title %></h4>
+            <h4 style="font-family: 'Gotham-medium';"><%= classes.first.title %></h4>
             <p><%= classes.first.description %></p>
             <p> Fees: <%=classes.first.fees %></p>
           <% end %>
