--- a/app/views/pages/schedule.html.erb
+++ b/app/views/pages/schedule.html.erb
@@ -69,7 +69,7 @@
               
             </td>
             <td><%=klass.instructor %></td>
-            <td style="padding-left: 3%;" class="person-icon"><%= image_tag 'person' %></td>
+            <td style="padding-left: 3%;" class="person-icon"><%=link_to image_tag('person'), sign_up_path(klass.id) %></td>
           </tr>
         <% end %>
       <% end %>
@@ -78,5 +78,6 @@
 <% else %>
   <div style="font-size: 1.5em; padding-top: 10%; color: #F47B20;" class="container-fluid text-center">
     <p> No classes match your search.  Please try again with different filters. </p>
+    <p><%=link_to "Reset Search", schedule_path, :class => 'btn btn-small btn-primary' %></p>
   </div>
 <% end %>
