--- a/app/views/pages/sign_up.html.erb
+++ b/app/views/pages/sign_up.html.erb
@@ -23,7 +23,7 @@
       <div class="form-group form-cell">
         <%= label_tag(:email, "Email:", :class => "sign-up-label") %>
         <div >
-          <%=text_field_tag :email, "", class: 'form-control sign-up-field'%>
+          <%=email_field_tag :email, "", class: 'form-control sign-up-field'%>
         </div>
       </div>
       <div class="form-group form-cell">
